# qpik

./: CMakeLists.txt  README.md  build.bash  build_and_install.bash  format_count.sh  package.sh
cmake/: qpikConfig.cmake.in
include/qpik/: configuration.hpp  math_utils.hpp  qpik.hpp  solve_ik.hpp  utils.hpp
include/qpik/constraints/: dof_freezing_task.hpp
include/qpik/limits/: acceleration_limit.hpp  collision_avoidance_limit.hpp  configuration_limit.hpp  limit.hpp  velocity_limit.hpp
include/qpik/tasks/: CSpaceTargetTask.hpp  damping_task.hpp  frame_task.hpp  relative_frame_task.hpp  singular_avoid_task.hpp  task.hpp
src/: configuration.cpp  math_utils.cpp  solve_ik.cpp  task.cpp
src/constraints/: dof_freezing_task.cpp
src/limits/: acceleration_limit.cpp  collision_avoidance_limit.cpp  configuration_limit.cpp  velocity_limit.cpp
src/tasks/: CSpaceTargetTask.cpp  damping_task.cpp  frame_task.cpp  relative_frame_task.cpp  singular_avoid_task.cpp
